--- a/webphishingClient/templates/client/select_exercise.html
+++ b/webphishingClient/templates/client/select_exercise.html
@@ -7,7 +7,7 @@
 <div class="page-inner">
 
     <div class="page-header">
-        <h4 class="page-title">Ethical Phishing - Dashboards</h4>
+        <h4 class="page-title">Ethical Phishing - Selecciona el ejercicio</h4>
         <ul class="breadcrumbs">
             <li class="nav-home">
                 <a href="{% url 'client_list' %}">
@@ -27,11 +27,112 @@
     <!-- Ejercicios -->
     <div class="row row-card-no-pd left-border-finished">
         <div class="col-lg-12 col-xl-2">
+            <a href="/client/dashboard">
+                <div class="card card-stats card-round">
+                    <div class="card-body">
+                        <div class="numbers">
+                            <p class="card-category">17/01/2001</p>
+                            <h4 class="card-title">NOMBRE_CAMPAÑA</h4>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col-lg-12 col-xl-2">
+            <div class="card card-stats card-round">
+                <div class="card-body ">
+                    <p></p>
+                    <h1>17 de Oct. 2020</h1>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6 col-xl-2">
+            <div class="card card-stats card-round">
+                <div class="card-body ">
+                    <div class="row">
+                        <div class="col-5">
+                            <div class="icon-big text-center">
+                                <i class="fas fa-envelope text-success"></i>
+                            </div>
+                        </div>
+                        <div class="col-7 col-stats">
+                            <div class="numbers">
+                                <p class="card-category">Enviados</p>
+                                <h4 class="card-title">7265</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6 col-xl-2">
+            <div class="card card-stats card-round">
+                <div class="card-body ">
+                    <div class="row">
+                        <div class="col-5">
+                            <div class="icon-big text-center">
+                                <i class="fas fa-envelope-open text-secondary"></i>
+                            </div>
+                        </div>
+                        <div class="col-7 col-stats">
+                            <div class="numbers">
+                                <p class="card-category">Abiertos</p>
+                                <h4 class="card-title">6501 (91%)</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6 col-xl-2">
+            <div class="card card-stats card-round">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-5">
+                            <div class="icon-big text-center">
+                                <i class="far fa-hand-pointer text-danger"></i>
+                            </div>
+                        </div>
+                        <div class="col-7 col-stats">
+                            <div class="numbers">
+                                <p class="card-category">Cliqueados</p>
+                                <h4 class="card-title">3402 (62%)</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6 col-xl-2">
+            <div class="card card-stats card-round">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-5">
+                            <div class="icon-big text-center">
+                                <i class="fas fa-fingerprint text-primary"></i>
+                            </div>
+                            
+                        </div>
+                        <div class="col-7 col-stats">
+                            <div class="numbers">
+                                <p class="card-category">Comprometidos</p>
+                                <h4 class="card-title">1645 (32%)</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Fin ejercicio -->
+
+    <div class="row row-card-no-pd left-border-active">
+        <div class="col-lg-12 col-xl-2">
             <div class="card card-stats card-round">
                 <div class="card-body">
                     <div class="numbers">
-                        <p class="card-category">Enviados</p>
-                        <h4 class="card-title">150GB</h4>
+                        <p class="card-category">17/01/2001</p>
+                        <h4 class="card-title">NOMBRE_CAMPAÑA</h4>
                     </div>
                 </div>
             </div>
@@ -39,10 +140,21 @@
         <div class="col-lg-12 col-xl-2">
             <div class="card card-stats card-round">
                 <div class="card-body ">
+
+                    <div class="numbers">
+                        <p class="card-category">Enviados</p>
+                        <h4 class="card-title">150GB</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6 col-xl-2">
+            <div class="card card-stats card-round">
+                <div class="card-body ">
                     <div class="row">
                         <div class="col-5">
                             <div class="icon-big text-center">
-                                <i class="flaticon-chart-pie text-warning"></i>
+                                <i class="fas fa-envelope text-success"></i>
                             </div>
                         </div>
                         <div class="col-7 col-stats">
@@ -61,26 +173,7 @@
                     <div class="row">
                         <div class="col-5">
                             <div class="icon-big text-center">
-                                <i class="flaticon-chart-pie text-warning"></i>
-                            </div>
-                        </div>
-                        <div class="col-7 col-stats">
-                            <div class="numbers">
-                                <p class="card-category">Enviados</p>
-                                <h4 class="card-title">150GB</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-xl-2">
-            <div class="card card-stats card-round">
-                <div class="card-body ">
-                    <div class="row">
-                        <div class="col-5">
-                            <div class="icon-big text-center">
-                                <i class="flaticon-coins text-success"></i>
+                                <i class="fas fa-envelope-open text-secondary"></i>
                             </div>
                         </div>
                         <div class="col-7 col-stats">
@@ -99,7 +192,7 @@
                     <div class="row">
                         <div class="col-5">
                             <div class="icon-big text-center">
-                                <i class="flaticon-error text-danger"></i>
+                                <i class="far fa-hand-pointer text-danger"></i>
                             </div>
                         </div>
                         <div class="col-7 col-stats">
@@ -118,7 +211,7 @@
                     <div class="row">
                         <div class="col-5">
                             <div class="icon-big text-center">
-                                <i class="flaticon-twitter text-primary"></i>
+                                <i class="fas fa-fingerprint text-primary"></i>
                             </div>
                         </div>
                         <div class="col-7 col-stats">
@@ -131,7 +224,7 @@
                 </div>
             </div>
         </div>
-    </div> 
+    </div>
 </div>
 
 {% endblock content %}
