--- a/webphishingCore/templates/includes/navigation.html
+++ b/webphishingCore/templates/includes/navigation.html
@@ -22,7 +22,7 @@
 			<!-- Navbar Header -->
 			<nav class="navbar navbar-header navbar-expand-lg" data-background-color="blue">
 				
-				{% if user.is_authenticated %}
+				{% if user.extend.isAdmin %}
 
 					<div class="container-fluid">
 						<div class="collapse" id="search-nav">
@@ -47,7 +47,7 @@
 								</a>
 
 								<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile" id="night-mode">
-									<a class="dropdown-item" href="{% url 'logout' %}" >Cerrar sesión</a>
+									<a class="dropdown-item" href="{% url 'auth_logout' %}" >Cerrar sesión</a>
 								</div>
 
 							</li>
