--- a/webphishingCore/templates/layouts/base_generic.html
+++ b/webphishingCore/templates/layouts/base_generic.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
 
 	<meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/apple-icon.png">
-	<link rel="icon" type="image/png" href="/static/assets/favicon.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/apple-icon.png' %}">
+	<link rel="icon" type="image/png" href="{% static 'assets/favicon.png' %}">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<title>
 	  Cybertrust Center - {% block title %}{% endblock %} | Cybertrust.cl
@@ -14,16 +15,16 @@
 
     <!-- Fonts and icons -->
     
-        <link rel="stylesheet" type="text/css" href="static/login/vendor/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="static/login/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="static/login/fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
-        <link rel="stylesheet" type="text/css" href="static/login/vendor/animate/animate.css">
-        <link rel="stylesheet" type="text/css" href="static/login/vendor/css-hamburgers/hamburgers.min.css">
-        <link rel="stylesheet" type="text/css" href="static/login/vendor/animsition/css/animsition.min.css">
-        <link rel="stylesheet" type="text/css" href="static/login/vendor/select2/select2.min.css">
-        <link rel="stylesheet" type="text/css" href="static/login/vendor/daterangepicker/daterangepicker.css">
-        <link rel="stylesheet" type="text/css" href="static/login/css/util.css">
-        <link rel="stylesheet" type="text/css" href="static/login/css/main.css">
+        <link rel="stylesheet" type="text/css" href="{% static 'login/vendor/bootstrap/css/bootstrap.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'login/fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'login/fonts/Linearicons-Free-v1.0.0/icon-font.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'login/vendor/animate/animate.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'login/vendor/css-hamburgers/hamburgers.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'login/vendor/animsition/css/animsition.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'login/vendor/select2/select2.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'login/vendor/daterangepicker/daterangepicker.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'login/css/util.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'login/css/main.css' %}">
 
     <!-- Specific CSS goes HERE -->
     {% block stylesheets %}{% endblock stylesheets %}
@@ -36,15 +37,15 @@
     {% include 'includes/scripts.html' %}
     
     {% block javascripts %}
-    <script src="static/login/vendor/jquery/jquery-3.2.1.min.js"></script>
-    <script src="static/login/vendor/animsition/js/animsition.min.js"></script>
-    <script src="static/login/vendor/bootstrap/js/popper.js"></script>
-    <script src="static/login/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="static/login/vendor/select2/select2.min.js"></script>
-    <script src="static/login/vendor/daterangepicker/moment.min.js"></script>
-    <script src="static/login/vendor/daterangepicker/daterangepicker.js"></script>
-    <script src="static/login/vendor/countdowntime/countdowntime.js"></script>
-    <script src="static/login/js/main.js"></script>
+    <script src="{% static 'login/vendor/jquery/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static 'login/vendor/animsition/js/animsition.min.js' %}"></script>
+    <script src="{% static 'login/vendor/bootstrap/js/popper.js' %}"></script>
+    <script src="{% static 'login/vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'login/vendor/select2/select2.min.js' %}"></script>
+    <script src="{% static 'login/vendor/daterangepicker/moment.min.js' %}"></script>
+    <script src="{% static 'login/vendor/daterangepicker/daterangepicker.js' %}"></script>
+    <script src="{% static 'login/vendor/countdowntime/countdowntime.js' %}"></script>
+    <script src="{% static 'login/js/main.js' %}"></script>
     {% endblock javascripts %}
 	
 </body>
