--- a/webphishingManagement/templates/management/add_client.html
+++ b/webphishingManagement/templates/management/add_client.html
@@ -9,7 +9,7 @@
             <h4 class="page-title">Crear cliente</h4>
             <ul class="breadcrumbs">
                 <li class="nav-home">
-                    <a href="{% url 'client_list' %}">
+                    <a href="{% url 'management_home' %}">
                         <i class="flaticon-home"></i>
                     </a>
                 </li>
@@ -17,13 +17,13 @@
                     <i class="flaticon-right-arrow"></i>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'client_list' %}">Listado clientes</a>
+                    <a href="{% url 'management_client_list' %}">Administración clientes</a>
                 </li>
                 <li class="separator">
                     <i class="flaticon-right-arrow"></i>
                 </li>
                 <li class="nav-item">
-                    <a href=""></a>Crear cliente</a>
+                    <a href=""></a><b>Crear cliente</b></a>
                 </li>
             </ul>
         </div>
@@ -34,7 +34,7 @@
                 </div>
             <div class="card-body col-md-10 ml-auto mr-auto">
                 <div class="form-group">
-                    <form method="POST">
+                    <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         {{ form.as_p }}
                         <button class="btn btn-success text-center pull-right mt-2" type="submit">Crear</button>
