--- a/webphishingManagement/templates/management/client/list.html
+++ b/webphishingManagement/templates/management/client/list.html
@@ -56,7 +56,7 @@
                                     <div class="title">Ejercicios</div>
                                 </div>
                                 <div class="col">
-                                    <div class="number">25</div>
+                                    <div class="number">{{ client.getColaborators|length }}</div>
                                     <div class="title">Colaboradores</div>
                                 </div>
                             </div>
