--- a/webphishingManagement/templates/management/client/previewXLS.html
+++ b/webphishingManagement/templates/management/client/previewXLS.html
@@ -104,6 +104,7 @@
                         </table>
                         
                     </div>
+                </div>
             </div>
         </div>
           
